tests/parser-test-files/bad-files/define-alias.3.error
error: Invalid alias variable
  --> test:4:23
   |
 4 |  (define-alias Much-Wow "Wow")
   |                         ^^^^^ expected type.
