tests/parser-test-files/bad-files/define-alias.3.coal
;; BAD: Invalid define alias -
(package test-package)

(define-alias Much-Wow "Wow")
